yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosine-similarity-deployment
  namespace: osvaldorioz-1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosine-similarity
  template:
    metadata:
      labels:
        app: cosine-similarity
    spec:
      containers:
      - name: cosine-similarity
        image: image-registry.openshift-image-registry.svc:5000/osvaldorioz-1-dev/cosine-similarity@sha256:ebc9f97e27d329fff20e002f620feced25ff62c083dfe0ba05f8427a9c8b3179
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        command: ["/bin/sh", "-c"]
        args: ["uvicorn main:app --host 0.0.0.0 --port 8080"]
