yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosine-similarity-service
  namespace: osvaldorioz-1-dev
spec:
  selector:
    app: cosine-similarity
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
